@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2867809 by drunken monkey, borisson_: Added an option to enable a processor
+  for all compatible fields.
 - #2878974 by acbramley: Added the date Views argument plugin.
 - #2840274 by drunken monkey, borisson_: Updated the Core dependency to 8.3.
 - #2874895 by harsha012, drunken monkey, borisson_: Fixed OOP code to use the
